work in progress

--- a/auth.html
+++ b/auth.html
@@ -87,6 +87,93 @@
 			</div>
 		</div>
 	</div>
+	<footer class="footer-area sp-y">
+		<!-- <div class="footer-top-wrap">
+			<div class="container">
+				<div class="footer-top-content">
+					<div class="row align-items-center">
+						<div class="col-md-8 col-lg-6">
+							<h2>Get Started Today</h2>
+							<h2>Our Customer <br>Loves What we do</h2>
+						<p>We are in the business of pleasing our customers, we believe customers are king and we treat them as such.
+						  Our reports speaks for us 
+						</p>
+						</div>
+						<div class="col-md-4 col-lg-6 text-md-right mt-sm-25">
+							<a href="contact.html" class="btn-outline">Contact Us</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div> -->
+	
+		<!-- <div class="footer-widget-area sm-top-wt"> -->
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4 order-4 order-lg-0">
+						<div class="widget-item">
+							<div class="about-widget">
+								<a href="index.html"><img src="images/Tipper Logo White.png" alt="Logo"/></a>
+								
+	
+								<div class="copyright-txt">
+									<p>&copy; 2019 Tippa.Ng All Rights Reserved.</p>
+									<p>Tipper.ng is an e-commerce solution for that 
+										eliminates the chains of connections that exist 
+										from the seller of construction materials to the buyer.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+	
+					<div class="col-md-4 col-lg-2 ml-auto">
+						<div class="widget-item">
+							<h4 class="widget-title">Information</h4>
+							<div class="widget-body">
+								<ul class="widget-list">
+									<li><a href="#">Our company</a></li>
+									<li><a href="#">Contact us</a></li>
+									<li><a href="#">Our services</a></li>
+									<li><a href="#">Careers</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+	
+					<div class="col-md-4 col-lg-2 ml-auto">
+						<div class="widget-item">
+							<h4 class="widget-title">Quick Links</h4>
+							<div class="widget-body">
+								<ul class="widget-list">
+									<li><a href="#">Facebook</a></li>
+									<li><a href="#">Twitter</a></li>
+									
+									<li><a href="#">Instagram</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+	
+					<div class="col-md-4 col-lg-3">
+						<div class="widget-item">
+							<h4 class="widget-title">Contact</h4>
+							<div class="widget-body">
+								<address>
+									<!-- Police Barrack, Estate 15,  Off Shimawa Road,
+									RCCG Redemption Camp,  Mowe, Ogun State. -->
+
+									<br>
+									+23490 355 695 71
+									<br>
+									+23480 766 767 72
+								</address>
+							</div>
+						</div>
+					</div>
+				</div>
+			<!-- </div> -->
+		</div>
+	</footer>
 <script src='js/app.min.js'></script>
 </body>
 </html>
