--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <!--== Main Style CSS ==-->
 	<link href="css/style.min (2).css" rel="stylesheet"/>
 	<link src="css/font-awesome.min.css" rel="stylesheet"/>
+	<link href="css/materialdesignicons.min.css" rel="stylesheet"/>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/brands.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 	<meta name="msapplication-TileColor" content="#2b5797">
@@ -117,6 +118,7 @@
 								<!-- <li><a href="contact.html">Contact</a></li> -->
 								<!-- <li><a href="auth.html">Login</a></li>
 								<li><a href="Sign Up.html">Sign Up</a></li> -->
+								
 								<li class="has-submenu"><a href="index.html"> Place Order</a>
 									<ul class="submenu-nav" id="options">
 										<li><a href="#"> Order Granite</a></li>
@@ -143,6 +145,7 @@
 				</div>
 			</div>
 		</header>
+		
 	<!-- Hero unit -->
 	<div class="hero">
 		<div class="hero__overlay hero__overlay--gradient"></div>
@@ -153,7 +156,7 @@
 					<div class="hero__content__inner" id="navConverter">
 						<h1 class="hero__title">GET GRANITES, SAND, GRAVELS AND ROCKS DELIVERED TO YOUR SITE</h1>
 						<p class="hero__text">Tippa.ng is a logistics e-commerce site that ensures that you have your houses built with the best resources at the least cost possible </p>
-						<a href="#" target="_blank" class="button btn-light">View Gallery</a>
+						<a href="Gallery.html" target="_blank" class="button btn-light">View Gallery</a>
 						<a href="#scrollToNext" class="button btn-dark">Learn more</a>
 					</div>
 				</div>
