--- a/Gallery.html
+++ b/Gallery.html
@@ -363,11 +363,11 @@
                 <div class="testimonial-carousel-dots"></div>
             </div>
 
-            <div class="col-lg-6 ml-auto">
+            <!-- <div class="col-lg-6 ml-auto">
                 <div class="testimonial-content-wrap">
                     <div class="testimonial-content">
                         <!-- Start Testimonial Item -->
-                        <div class="testimonial-item">
+                        <!-- <div class="testimonial-item">
                             <div class="testimonial-thumb">
                                 <img src="img/testimonial/client-01.jpg" alt="Businex"/>
                             </div>
@@ -380,11 +380,11 @@
                                 </p>
                                 <h5 class="client-name">Bolaji Olayinka</h5>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- End Testimonial Item -->
 
                         <!-- Start Testimonial Item -->
-                        <div class="testimonial-item">
+                        <!-- <div class="testimonial-item">
                             <div class="testimonial-thumb">
                                 <img src="img/testimonial/client-02.jpg" alt="Businex"/>
                             </div>
@@ -396,11 +396,11 @@
                                   </p>
                                 <h5 class="client-name">Ayomide Oso</h5>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- End Testimonial Item -->
 
                         <!-- Start Testimonial Item -->
-                        <div class="testimonial-item">
+                        <!-- <div class="testimonial-item">
                             <div class="testimonial-thumb">
                                 <img src="img/testimonial/client-03.jpg" alt="Businex"/>
                             </div>
@@ -413,14 +413,14 @@
                                 <h5 class="client-name">Owolabi Toba</h5>
                             </div>
 
-                        </div>
+                        </div> -->
                         <!-- End Testimonial Item -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!--== Start Brand Logo Area Wrapper ==-->
 <div class="brand-logo-area sm-top">
