--- a/Gallery.html
+++ b/Gallery.html
@@ -34,6 +34,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <!--== Main Style CSS ==-->
     <link href="css/servicestyle.min.css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" 
+	rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <style>
         @media only screen and (max-width:767.98px){.sm-top{margin-top:60px; margin-bottom:60px}}
         @media only screen and (min-width:768px) and (max-width:991.98px){.sm-top{margin-top:60px; margin-bottom:60px}}
