--- a/OrderSand.html
+++ b/OrderSand.html
@@ -6,7 +6,7 @@
 
 		<!--end::Base Path -->
 		<meta charset="utf-8" />
-		<title>Granite Order</title>
+		<title>Order Sand</title>
 		<meta name="description" content="Multi column form examples">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link href="orderCss/all.min.css" rel="stylesheet" type="text/css" />
@@ -68,7 +68,7 @@
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label mx-auto">
 												<h1 class="kt-portlet__head-title">
-													<b> Granite Order</b>													
+													<b> Order Sand</b>													
 												</h1>
 											</div>
 										</div>
@@ -150,7 +150,7 @@
 																		
 																</div> -->
 																	<div class="col-lg-3 col-md-3">
-																			<label class=""> Our Price:</label>
+																			<label class=""> Our Price/Unit(Kg):</label>
 																			<input type="text" class="form-control" placeholder="">
 																			
 																	</div>
