--- a/Sign Up.html
+++ b/Sign Up.html
@@ -7,7 +7,9 @@
     <link rel='stylesheet' href='css/style.min.css' />
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <!--== Main Style CSS ==-->
-    <link href="css/style.min (2).css" rel="stylesheet"/>
+	<link href="css/style.min (2).css" rel="stylesheet"/>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" 
+	rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 </head>
 <body>
 	<!-- navbar -->
@@ -43,10 +45,10 @@
 							<ul class="main-menu nav">
 								<li><a href="index.html">Home</a> </li>
 								<li><a href="Gallery.html">OUR Services</a></li>
-								<li><a href="about.html">About Us</a> </li>
+								<li><a href="Gallery.html">About Us</a> </li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="auth.html">Login</a></li>
-								<li><a href="Sign Up.html">Sign Up</a></li>
+								<!-- <li><a href="Sign Up.html">Sign Up</a></li> -->
 							</ul>
 						</div>
 						<!-- End Navigation Area -->
