--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="img/loggo.png" type="image/x-icon"/>
 
     <!--== Google Fonts ==-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700" rel="stylesheet"> -->
 
     <!--== All Animate CSS ==-->
     <link href="css/animate.min.css" rel="stylesheet"/>
@@ -32,11 +32,12 @@
     <link href="css/slick.min.css" rel="stylesheet"/>
     <!--== All BootStrap CSS ==-->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <!--== Main Style CSS ==-->
-    <link href="css/servicestyle.min.css" rel="stylesheet"/>
+    <!--== Main Style CSS ==--> 
+   <link href="css/servicestyle.min.css" rel="stylesheet"/>
+    <!-- <link href="css/style.min (2).css" rel="stylesheet"/> -->
     <style>
-        @media only screen and (max-width:767.98px){.sm-top{margin-top:60px; margin-bottom:60px}}
-        @media only screen and (min-width:768px) and (max-width:991.98px){.sm-top{margin-top:60px; margin-bottom:60px}}
+        @media only screen and (max-width:767.98px){.sm-top{margin-top:60px; margin-bottom:60px} .header-action {margin-top:30px}}
+        @media only screen and (min-width:768px) and (max-width:991.98px){.sm-top{margin-top:60px; margin-bottom:60px}.header-action {margin-top:60px} .header-action button{font-size:30px} }
         @media only screen and (min-width:992px) and (max-width:1198.98px){.sm-top{margin-top:60px; margin-bottom:60px}}
         @media only screen and (min-width:1200px) and (max-width:2000px){.sm-top{margin-top:60px; margin-bottom:60px}}
         </style>
@@ -67,9 +68,17 @@
                 <div class="navigation-area mt-lg-3">
                     <ul class="main-menu nav">
                         <li><a href="index.html">Home</a> </li>
-                        <li><a href="service.html">Our Services</a></li>
+                        <!-- <li><a href="Gallery.html">OUR Services</a></li> -->
                         <li><a href="about.html">About Us</a> </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">Contact Us</a> </li>
+                        <li class="has-submenu"><a href="#"> Place Order</a>
+                            <ul class="submenu-nav" id="options">
+                                <li><a href="Order.html"> Order Granite</a></li>   
+                                <li><a href="OrderSand.html"> Order Sand</a></li>
+                                <li><a href="OrderIron.html"> Order Iron</a></li>
+                                <li><a href="#"> Others</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- End Navigation Area -->
@@ -77,9 +86,10 @@
 
             <div class="col-7 col-lg-3">
                 <!-- Start Header Action Area -->
-                <div class="header-action mt-lg-3 text-right">
-                    <a href="tel:+2349079061514" class="tel-no">+2349079061514</a>
-                    <button class="btn-cog"><i class="fa fa-cog"></i></button>
+                <div class="header-action mt-lg-3  text-right">
+                    <!-- <a href="auth.html" class="btn btn-outline-light btn-md">Log In</a>
+                    <a href="Sign Up.html" class="btn btn-primary btn-md">Sign Up</a> -->
+                    <button class="btn-cog"><i class="fa fa-sign-in "></i> <span class="sign">Sign In</span></button>
                     <button class="btn-menu d-lg-none"><i class="fa fa-bars"></i></button>
                 </div>
                 <!-- End Header Action Area -->
@@ -95,7 +105,7 @@
           <div class="col-lg-10 col-xl-8 m-auto text-center">
               <div class="page-header-content-inner">
                   <div class="page-header-content">
-                      <h2>ABOUt US</h2>
+                      <h2>ABOUT US</h2>
                       
                   </div>
               </div>
@@ -231,6 +241,166 @@
     </div>
 </div> -->
 <!--== End Brand Logo Area Wrapper ==-->
+<!--== Start Page Content Area Wrapper ==-->
+<div class="page-content-wrapper">
+    <div class="service-details-wrapper sm-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="service-details-content">
+                        <figure class="service-details-thumb">
+                            <img src="assets/img/service/details/01.jpg" alt="Businex-Service Details"/>
+                            <img src="assets/img/service/details/02.jpg" alt="Businex-Service Details"/>
+                            <img src="assets/img/service/details/03.jpg" alt="Businex-Service Details"/>
+                        </figure>
+                        <div class="service-details-info">
+                            <h3>Digital Solutions</h3>
+                            <p>Voluptatum delenitied atqued corrupti is eseted quased stias cepturi sint aete non
+                                provident,
+                                similique sunt dunt labore ete dolored magnam aliquam quaerat Neque porro quisquam
+                                est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+                                numquam
+                                eius modi tempora incidun</p>
+
+                            <div class="about-service mt-50 mt-sm-35">
+                                <h4>About this Service</h4>
+                                <p>Voluptatum delenitied atqued corrupti is eseted quased stias cepturi sint aete non
+                                    provident,
+                                    similique sunt dunt labore ete dolored magnam aliquam quaerat Neque porro quisquam
+                                    est,
+                                    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+                                    numquam
+                                    eius modi tempora incidun</p>
+                                <p>Corrupti deleniti atque magnam is es et quas stias cepturi sint aete non provident,
+                                    similique sunt dunt ut labore et dolore magnam aliquam quaerat Neque porro quisquam
+                                    est dolorem</p>
+                                <ul class="service-feature">
+                                    <li>voluptatum deleniti atque corrupti is es et quas stias cepturi sint aete non
+                                        provident, similique sunt dunt ut labore et dolore magnam aliquam quaerat
+                                    </li>
+                                    <li>voluptatum deleniti atque corrupti is es et quas stias cepturi sint aete non
+                                        provident, similique sunt dunt ut labore et dolore magnam aliquam quaerat
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="how-we-works-wrap mt-50 mt-sm-35">
+                                <h4>How we work</h4>
+                                <p>voluptatum deleniti atque corrupti is es et quas stias cepturi sint aete non
+                                    provident, similique sunt dunt ut labore et dolore magnam aliquam quaerat Neque
+                                    porro quisquam est, qui dolorem ipsum </p>
+
+                                <div class="how-we-works-content">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="icon-box-item">
+                                                <div class="icon-box__icon">
+                                                    <img src="assets/img/service/icon/strategy.png"
+                                                         alt="Businex - How we work"/>
+                                                </div>
+                                                <div class="icon-box__info">
+                                                    <h5>Case Strategy</h5>
+                                                    <p>voluptatum deleniti atqued corrupti cepturi
+                                                        sinte aeted psamtem quia voluptas sit aut odit aut
+                                                        fugit. </p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="icon-box-item">
+                                                <div class="icon-box__icon">
+                                                    <img src="assets/img/service/icon/track-record.png"
+                                                         alt="Businex - How we work"/>
+                                                </div>
+                                                <div class="icon-box__info">
+                                                    <h5>Track Record</h5>
+                                                    <p>voluptatum deleniti atqued corrupti cepturi
+                                                        sinte aeted psamtem quia voluptas sit aut odit aut
+                                                        fugit. </p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="icon-box-item">
+                                                <div class="icon-box__icon">
+                                                    <img src="assets/img/service/icon/research.png"
+                                                         alt="Businex - How we work"/>
+                                                </div>
+                                                <div class="icon-box__info">
+                                                    <h5>Research & Investigation</h5>
+                                                    <p>voluptatum deleniti atqued corrupti cepturi
+                                                        sinte aeted psamtem quia voluptas sit aut odit aut
+                                                        fugit. </p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="icon-box-item">
+                                                <div class="icon-box__icon">
+                                                    <img src="assets/img/service/icon/analysis.png"
+                                                         alt="Businex - How we work"/>
+                                                </div>
+                                                <div class="icon-box__info">
+                                                    <h5>Case Analysis</h5>
+                                                    <p>voluptatum deleniti atqued corrupti cepturi
+                                                        sinte aeted psamtem quia voluptas sit aut odit aut
+                                                        fugit. </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="pagination-wrap">
+                                <ul class="pagination">
+                                    <li class="prev"><a href="#"><i class="fa fa-long-arrow-left"></i> Previous</a></li>
+                                    <li class="next"><a href="#">Next <i class="fa fa-long-arrow-right"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mtn-40">
+                    <div class="sidebar-wrap mt-sm-90 mt-md-100">
+                        <!-- Start Sidebar Item -->
+                        <div class="sidebar-single">
+                            <h3 class="sidebar-heading">Services</h3>
+                            <div class="sidebar-body">
+                                <ul class="service-list">
+                                    <li><a href="service-details.html">Creative Ideas</a></li>
+                                    <li><a href="service-details.html">Digital Solutions</a></li>
+                                    <li><a href="service-details.html">Brand & Communication</a></li>
+                                    <li><a href="service-details.html">Creative Strategy</a></li>
+                                    <li><a href="service-details.html">Marketing Policy</a></li>
+                                    <li><a href="service-details.html">Campaign & PR</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- End Sidebar Item -->
+
+                        <!-- Start Sidebar Item -->
+                        <div class="sidebar-single">
+                            <h3 class="sidebar-heading">Download Brochure</h3>
+                            <div class="sidebar-body">
+                                <ul class="service-list">
+                                    <li><a href="#"><i class="fa fa-file-pdf-o"></i>Brochures.PDF</a></li>
+                                    <li><a href="#"><i class="fa fa-file-word-o"></i>Brochures.DOC</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- End Sidebar Item -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--== End Page Content Area Wrapper ==-->
 
 
 
@@ -371,7 +541,7 @@
                     <a href="https://instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
                 </div>
                 <div class="copyright-content">
-                    <p>&copy; 2019 Housefada Nig Ltd. All Rights Reserved.</p>
+                    <p>&copy; Tippa.ng  All Rights Reserved.</p>
                     <p>We are tested and trusted, A brand you can trust. a TRIAL will convince you.</p>
                 </div>
             </div>
