--- a/OrderMarble.html
+++ b/OrderMarble.html
@@ -6,7 +6,7 @@
 
 		<!--end::Base Path -->
 		<meta charset="utf-8" />
-		<title>Granite Order</title>
+		<title> Order Marble</title>
 		<meta name="description" content="Multi column form examples">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link href="orderCss/all.min.css" rel="stylesheet" type="text/css" />
@@ -150,7 +150,7 @@
 																		
 																</div> -->
 																	<div class="col-lg-3 col-md-3">
-																			<label class=""> Our Price:</label>
+																			<label class=""> Our Price/Unit(Kg):</label>
 																			<input type="text" class="form-control" placeholder="">
 																			
 																	</div>
